@@ -60,7 +60,6 @@ from sqlalchemy.engine.base import (
     Compiled,
     Connectable,
     Connection,
-    DefaultRunner,
     Dialect,
     Engine,
     ExecutionContext,
@@ -83,7 +82,6 @@ __all__ = (
     'Compiled',
     'Connectable',
     'Connection',
-    'DefaultRunner',
     'Dialect',
     'Engine',
     'ExecutionContext',
