@@ -254,6 +254,12 @@ CHANGES
       which need to hardwire a rowcount in for certain calls
       should override the method to provide different behavior.
 
+    - DefaultRunner and subclasses have been removed.  The job
+      of this object has been simplified and moved into 
+      ExecutionContext.  Dialects which support sequences should
+      add a `fire_sequence()` method to their execution context
+      implementation.  [ticket:1566]
+      
     - Functions and operators generated by the compiler now use
       (almost) regular dispatch functions of the form
       "visit_<opname>" and "visit_<funcname>_fn" to provide
